fix spacing style.css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 /* MASTER CSS FILE */
 
-
 /* COLOURS */
 /*
 #FFCE00
@@ -13,10 +12,7 @@
 #0c3867
 #020f28
 */
-
-
 /* ./COLOURS */
-
 
 /* VARIABLES */
 
@@ -44,14 +40,16 @@
 
 /* ./VARIABLES */
 
-
 /* Browser Reset added by Kevin Vizconde */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
+
 html {
   font-size: 62.5%;
   min-height: 100%;
@@ -66,12 +64,14 @@ body {
   width: 100%;
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
-  background: radial-gradient(110vw 100vh at bottom, #0765af 5%, #0c3867 25%, #020f28 60%) center / cover;
+  background: radial-gradient(110vw 100vh at bottom, #0765af 5%, #0c3867 25%, #020f28 60%) center /
+    cover;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
   color: var(--primaryWhite);
 }
+
 .home-container {
   display: flex;
   flex-wrap: wrap;
@@ -88,22 +88,25 @@ select {
   border: 0 !important;
   background-image: none;
 }
+
 button {
   border: none;
 }
+
 button:focus {
   outline: none;
 }
+
 button:active {
   transform: scale(1.06);
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
 /* ./END-Reset Elements */
-
 
 /* Patient Header */
 
@@ -113,28 +116,34 @@ a {
   display: flex;
   align-items: center;
 }
+
 .patient_container {
   flex: 1 0 50%;
   align-self: flex-start;
 }
-.patient_container>* {
+
+.patient_container > * {
   font-weight: 300;
   height: auto;
 }
+
 .patient_container__name {
   letter-spacing: .2rem;
   text-transform: uppercase;
   display: inline-block;
   width: 100%;
 }
+
 .patient_container__info {
   font-size: 2rem;
   color: var(--primaryGray);
   display: none;
 }
+
 .patient--color {
   color: var(--textBlue);
 }
+
 .logout_container__bttn {
   flex: 1 0 50%;
   text-transform: uppercase;
@@ -150,7 +159,6 @@ a {
 
 /* ./END of Patient Header */
 
-
 /* Navigation Bar */
 
 .navigation_container {
@@ -161,6 +169,7 @@ a {
   flex: 1 0 25%;
   width: 50%;
 }
+
 .navigation_container__contain {
   height: 50rem;
   display: flex;
@@ -168,6 +177,7 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+
 .navigation_container__icon {
   display: flex;
   align-items: center;
@@ -186,10 +196,12 @@ a {
 #preloader {
   visibility: hidden;
 }
+
 .icon--nav {
   width: 8rem;
   filter: invert(1);
 }
+
 .icon_title {
   margin-top: 1.5rem;
   font-weight: 300;
@@ -197,12 +209,14 @@ a {
   text-transform: uppercase;
   letter-spacing: .15rem;
 }
+
 .navigation_container__link:hover .icon_title {
   text-shadow: 0 0 .5rem var(--primaryWhite), 0 0 1rem var(--primaryWhite),
     0 0 1.5rem var(--primaryYellow), 0 0 2rem var(--primaryYellow), 0 0 2.5rem var(--primaryYellow),
     0 0 3rem var(--primaryYellow), 0 0 3.5rem var(--primaryYellow);
   transition: .12s ease-out;
 }
+
 .navigation_container__link:hover .icon--nav {
   filter: invert(69%) sepia(93%) saturate(1025%) hue-rotate(0deg) brightness(105%) contrast(108%)
     drop-shadow(0 0 2.5rem rgba(var(--yellowGlow), 1));
@@ -211,12 +225,12 @@ a {
 
 /* ./END of Navigation Bar */
 
-
 /* GLOBAL FOOTER */
 
 .footer_logo {
   height: 6rem;
 }
+
 footer {
   clear: both;
   position: relative;
@@ -227,24 +241,25 @@ footer {
 
 /* ./END-GLOBAL FOOTER */
 
-
 /* media query for smaller monitors */
-
 @media (max-width: 1024px) {
+
   .home-container {
     height: 95vh;
   }
 }
 
 /* media query for ipad */
-
 @media all and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) {
+
   .home-container {
     height: 90vh;
   }
+
   .navigation_container__contain {
     height: 40rem;
   }
+
   footer {
     margin-top: -5rem;
   }
